Some files have moved.
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6731 7226f50c-d813-0410-99bf-979b288ab488

--- a/MSVC/RavlImage.vcproj
+++ b/MSVC/RavlImage.vcproj
@@ -257,6 +257,14 @@ if not exist C:\Build\\NUL mkdir C:\Build\&#x0D;&#x0A;copy ..\.\Image\Base\defau
 				>
 			</File>
 			<File
+				RelativePath="..\.\Image\Base\ImgCnvRGB.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ImgCnvYUV.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\.\Image\BaseSSE\ImageConvSSE.cc"
 				>
 			</File>
