--- a/MSVC/RavlGUI3D.vcproj
+++ b/MSVC/RavlGUI3D.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="include\Win32;include;&quot;C:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2\Include&quot;;&quot;C:\GTKWIN32\lib\gtk-2.0\include&quot;;&quot;C:\GTKWIN32\lib\glib-2.0\include&quot;;&quot;C:\GTKWIN32\include\cairo&quot;;&quot;C:\GTKWIN32\include\gtk-2.0&quot;;&quot;C:\GTKWIN32\include\glib-2.0&quot;;&quot;C:\GTKWIN32\include\pango-1.0&quot;;&quot;C:\GTKWIN32\include\atk-1.0&quot;;&quot;C:\GTKWIN32\include\gtkglext-1.0&quot;"
+				AdditionalIncludeDirectories="include\Win32;include;&quot;C:\GTKWIN32\lib\gtk-2.0\include&quot;;&quot;C:\GTKWIN32\lib\glib-2.0\include&quot;;&quot;C:\GTKWIN32\lib\gtkglext-1.0\include&quot;;&quot;C:\GTKWIN32\include\cairo&quot;;&quot;C:\GTKWIN32\include\gtk-2.0&quot;;&quot;C:\GTKWIN32\include\glib-2.0&quot;;&quot;C:\GTKWIN32\include\pango-1.0&quot;;&quot;C:\GTKWIN32\include\atk-1.0&quot;;&quot;C:\GTKWIN32\include\gtkglext-1.0&quot;"
 				PreprocessorDefinitions="_DEBUG;VISUAL_CPP;_LIB;WIN32;RAVL_USE_GTK2=1;RAVL_CHECK=1;PROJECT_OUT=\&quot;C:\\Build\&quot;"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -118,7 +118,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="include\Win32;include;&quot;C:\Program Files\Microsoft Platform SDK for Windows Server 2003 R2\Include&quot;;&quot;C:\GTKWIN32\lib\gtk-2.0\include&quot;;&quot;C:\GTKWIN32\lib\glib-2.0\include&quot;;&quot;C:\GTKWIN32\include\cairo&quot;;&quot;C:\GTKWIN32\include\gtk-2.0&quot;;&quot;C:\GTKWIN32\include\glib-2.0&quot;;&quot;C:\GTKWIN32\include\pango-1.0&quot;;&quot;C:\GTKWIN32\include\atk-1.0&quot;;&quot;C:\GTKWIN32\include\gtkglext-1.0&quot;"
+				AdditionalIncludeDirectories="include\Win32;include;&quot;C:\GTKWIN32\lib\gtk-2.0\include&quot;;&quot;C:\GTKWIN32\lib\glib-2.0\include&quot;;&quot;C:\GTKWIN32\lib\gtkglext-1.0\include&quot;;&quot;C:\GTKWIN32\include\cairo&quot;;&quot;C:\GTKWIN32\include\gtk-2.0&quot;;&quot;C:\GTKWIN32\include\glib-2.0&quot;;&quot;C:\GTKWIN32\include\pango-1.0&quot;;&quot;C:\GTKWIN32\include\atk-1.0&quot;;&quot;C:\GTKWIN32\include\gtkglext-1.0&quot;"
 				PreprocessorDefinitions="NDEBUG;_LIB;VISUAL_CPP;WIN32;RAVL_USE_GTK2=1;PROJECT_OUT=\&quot;C:\\Build\&quot;"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -236,6 +236,10 @@
 				RelativePath="..\.\GUI\3D\DSurfacePointVertexByteRGBArray.cc"
 				>
 			</File>
+			<File
+				RelativePath="..\.\GUI\3D\GLContext.cc"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -300,6 +304,10 @@
 			</File>
 			<File
 				RelativePath="..\.\GUI\3D\DSurfacePointVertexByteRGBArray.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\GUI\3D\GLContext.hh"
 				>
 			</File>
 		</Filter>
