--- a/MSVC/Mains/VPlay.vcproj
+++ b/MSVC/Mains/VPlay.vcproj
@@ -62,8 +62,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="C:\Build\win32\debug\bin\VPlay.exe"
-				AdditionalDependencies=" RavlCore.lib Rpcrt4.lib RavlOS.lib ccmath.lib RavlMath.lib RavlImage.lib RavlIO.lib RavlOSIO.lib atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib gtkglext-win32-1.0.lib gdkglext-win32-1.0.lib OpenGL32.lib Glu32.lib RavlThreads.lib RavlGUI.lib RavlDPMT.lib RavlGUI2D.lib RavlGUIUtil.lib RavlVPlay.lib RavlImgIOV4L.lib jpeg.lib png.lib z.lib tiff.lib RavlImageIO.lib RavlExtImgIO.lib RavlDPDisplay.lib RavlVideoIO.lib CSPDriver.lib RavlURLIO.lib RavlLibMPEG2.lib RavlOptimise.lib RavlImageProc.lib ws2_32.lib RavlDVDRead.lib RavlAVIFile.lib libjasper.lib RavlImgIOJasper.lib RavlDV.lib RavlImgIOV4L2.lib RavlRawVidIO.lib RavlLibFFmpeg.lib RavlImgIO1394dc.lib"
-				AdditionalLibraryDirectories="C:\GTKWIN32\lib\;C:\GTKWIN32\lib\;C:\GTKWIN32\lib;C:\GTKWIN32\lib;C:\GTKWIN32\lib;C:\Build\win32\debug\lib"
+				AdditionalDependencies=" RavlCore.lib Rpcrt4.lib RavlOS.lib ccmath.lib RavlMath.lib RavlImage.lib RavlIO.lib RavlOSIO.lib atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib gtkglext-win32-1.0.lib gdkglext-win32-1.0.lib OpenGL32.lib Glu32.lib RavlThreads.lib RavlGUI.lib RavlDPMT.lib RavlGUI2D.lib RavlGUIUtil.lib RavlVPlay.lib RavlImgIOV4L.lib jpeg.lib png.lib z.lib tiff.lib RavlImageIO.lib RavlExtImgIO.lib RavlDPDisplay.lib RavlVideoIO.lib CSPDriver.lib RavlURLIO.lib RavlLibMPEG2.lib RavlOptimise.lib RavlImageProc.lib ws2_32.lib RavlDVDRead.lib RavlAVIFile.lib RavlImgIOJasper.lib RavlDV.lib RavlImgIOV4L2.lib RavlRawVidIO.lib RavlLibFFmpeg.lib RavlImgIO1394dc.lib"
+				AdditionalLibraryDirectories="C:\GTKWIN32\lib\;C:\GTKWIN32\lib\;C:\GTKWIN32\lib;C:\GTKWIN32\lib;C:\Build\win32\debug\lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				IgnoreDefaultLibraryNames="msvcrt"
@@ -140,8 +140,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="C:\Build\win32\opt\bin\VPlay.exe"
-				AdditionalDependencies=" RavlCore.lib Rpcrt4.lib RavlOS.lib ccmath.lib RavlMath.lib RavlImage.lib RavlIO.lib RavlOSIO.lib atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib gtkglext-win32-1.0.lib gdkglext-win32-1.0.lib OpenGL32.lib Glu32.lib RavlThreads.lib RavlGUI.lib RavlDPMT.lib RavlGUI2D.lib RavlGUIUtil.lib RavlVPlay.lib RavlImgIOV4L.lib jpeg.lib png.lib z.lib tiff.lib RavlImageIO.lib RavlExtImgIO.lib RavlDPDisplay.lib RavlVideoIO.lib CSPDriver.lib RavlURLIO.lib RavlLibMPEG2.lib RavlOptimise.lib RavlImageProc.lib ws2_32.lib RavlDVDRead.lib RavlAVIFile.lib libjasper.lib RavlImgIOJasper.lib RavlDV.lib RavlImgIOV4L2.lib RavlRawVidIO.lib RavlLibFFmpeg.lib RavlImgIO1394dc.lib"
-				AdditionalLibraryDirectories="C:\GTKWIN32\lib\;C:\GTKWIN32\lib\;C:\GTKWIN32\lib;C:\GTKWIN32\lib;C:\GTKWIN32\lib;C:\Build\win32\opt\lib"
+				AdditionalDependencies=" RavlCore.lib Rpcrt4.lib RavlOS.lib ccmath.lib RavlMath.lib RavlImage.lib RavlIO.lib RavlOSIO.lib atk-1.0.lib glib-2.0.lib gthread-2.0.lib gobject-2.0.lib gmodule-2.0.lib gtk-win32-2.0.lib gdk-win32-2.0.lib gdk_pixbuf-2.0.lib pango-1.0.lib gtkglext-win32-1.0.lib gdkglext-win32-1.0.lib OpenGL32.lib Glu32.lib RavlThreads.lib RavlGUI.lib RavlDPMT.lib RavlGUI2D.lib RavlGUIUtil.lib RavlVPlay.lib RavlImgIOV4L.lib jpeg.lib png.lib z.lib tiff.lib RavlImageIO.lib RavlExtImgIO.lib RavlDPDisplay.lib RavlVideoIO.lib CSPDriver.lib RavlURLIO.lib RavlLibMPEG2.lib RavlOptimise.lib RavlImageProc.lib ws2_32.lib RavlDVDRead.lib RavlAVIFile.lib RavlImgIOJasper.lib RavlDV.lib RavlImgIOV4L2.lib RavlRawVidIO.lib RavlLibFFmpeg.lib RavlImgIO1394dc.lib"
+				AdditionalLibraryDirectories="C:\GTKWIN32\lib\;C:\GTKWIN32\lib\;C:\GTKWIN32\lib;C:\GTKWIN32\lib;C:\Build\win32\opt\lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
