Add ByteYCbCrBT709Value.hh to RavlImage.vcproj
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@7141 7226f50c-d813-0410-99bf-979b288ab488

--- a/MSVC/RavlImage.vcproj
+++ b/MSVC/RavlImage.vcproj
@@ -277,6 +277,10 @@ if not exist C:\Build\share\RAVL\Fonts\NUL mkdir C:\Build\share\RAVL\Fonts&#x0D;
 				>
 			</File>
 			<File
+				RelativePath="..\.\Image\Base\ByteYCbCrBT709Value.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\.\Image\Base\UInt16YCbCrBT601Value.cc"
 				>
 			</File>
@@ -488,6 +492,10 @@ if not exist C:\Build\share\RAVL\Fonts\NUL mkdir C:\Build\share\RAVL\Fonts&#x0D;
 			</File>
 			<File
 				RelativePath="..\.\Image\Base\ByteYCbCrBT601Value.hh"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\Base\ByteYCbCrBT709Value.hh"
 				>
 			</File>
 			<File
