Add ByteYCbCrBT709Value.hh to RavlImageIO.vcproj
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@7144 7226f50c-d813-0410-99bf-979b288ab488

--- a/MSVC/RavlImageIO.vcproj
+++ b/MSVC/RavlImageIO.vcproj
@@ -261,6 +261,26 @@ if not exist C:\Build\share\RAVL\pixmaps\NUL mkdir C:\Build\share\RAVL\pixmaps&#
 				>
 			</File>
 			<File
+				RelativePath="..\.\Image\ImageIO\ImgIOByteYCbCrBT709Value.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\ImageIO\ImgIOUInt16YCbCrBT709Value.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\ImageIO\ImgIOYCbCrBT709ValueFloat.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\ImageIO\ImgIOByteYCbCr422BT709Value.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\.\Image\ImageIO\ImgIOUInt16YCbCr422BT709Value.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\.\Image\ImageIO\ImgTypeCnv.cc"
 				>
 			</File>
